--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "hexo": {
     "version": "3.4.4"
   },
+  "scripts": {
+    "deploy": "hexo generate --deploy",
+    "build": "hexo generate",
+    "server": "hexo server"
+  },
   "dependencies": {
     "hexo": "^3.2.0",
     "hexo-deployer-git": "^0.3.1",
