--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,28 @@
 language: node_js
 node_js: stable
-install:
-- npm install
-script:
-- hexo g
-after_script:
-- cd ./public
-- git init
-- git config user.name "bigpear0201"
-- git config user.email "bigpear0201@gmail.com"
-- git add .
-- git commit -m "Update docs"
-- git push --force --quiet "https://${BLOG_TOKEN}@${GH_REF}" master:master
+cache:
+  directories:
+    - node_modules
 branches:
   only:
   - master
+before_install:
+  - npm install -g hexo-cli
+install:
+  - npm install
+script:
+  - hexo g
+after_script:
+  #- cd ./public
+  #- git init
+  - git config user.name "bigpear0201"
+  - git config user.email "bigpear0201@gmail.com"
+  #- git add .
+  #- git commit -m "Update docs"
+  #- git push --force --quiet "https://${BLOG_TOKEN}@${GH_REF}" master:master
+  - sed -i'' "s~git@github.com:bigpear0201/bigpear0201.github.io.git~https://${BLOG_TOKEN}@${GH_REF}~" _config.yml
+  - hexo d
+
 env:
   global:
   - GH_REF: github.com/bigpear0201/bigpear0201.github.io.git
